v0.10.0rc2/_sources/generated/statsmodels.discrete.discrete_model.MultinomialModel.rst.txt
statsmodels.discrete.discrete\_model.MultinomialModel
=====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: MultinomialModel

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MultinomialModel.cdf
         MultinomialModel.cov_params_func_l1
         MultinomialModel.fit
         MultinomialModel.fit_regularized
         MultinomialModel.from_formula
         MultinomialModel.hessian
         MultinomialModel.information
         MultinomialModel.initialize
         MultinomialModel.loglike
         MultinomialModel.pdf
         MultinomialModel.predict
         MultinomialModel.score



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MultinomialModel.endog_names
         MultinomialModel.exog_names

