v0.15.0/_sources/generated/statsmodels.discrete.discrete_model.MultinomialModel.rst.txt
statsmodels.discrete.discrete\_model.MultinomialModel
=====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: MultinomialModel
   :exclude-members: cdf,cov_params_func_l1,fit,fit_constrained,fit_regularized,from_formula,get_distribution,hessian,information,initialize,loglike,pdf,predict,score,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~MultinomialModel.cdf
      ~MultinomialModel.cov_params_func_l1
      ~MultinomialModel.fit
      ~MultinomialModel.fit_constrained
      ~MultinomialModel.fit_regularized
      ~MultinomialModel.from_formula
      ~MultinomialModel.get_distribution
      ~MultinomialModel.hessian
      ~MultinomialModel.information
      ~MultinomialModel.initialize
      ~MultinomialModel.loglike
      ~MultinomialModel.pdf
      ~MultinomialModel.predict
      ~MultinomialModel.score
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~MultinomialModel.endog_names
      ~MultinomialModel.exog_names
   
   
   